name: corrupted-memory-example
version: 0.1
description: Example of memory corruption that causes crash during garbage collection
homepage: https://github.com/andrewthad/corrupted-memory-example
bug-reports: https://github.com/andrewthad/corrupted-memory-example/issues
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2018 Andrew Martin
license: BSD3
license-file: LICENSE
build-type: Simple
cabal-version: >= 1.10

library
  hs-source-dirs: src
  build-depends:
      base >= 4.9 && < 5.0
    , ghc-prim >= 0.5.0 && < 0.6
    , primitive >= 0.6.1 && < 0.7
  exposed-modules:
    Packed.Bytes
    Packed.Bytes.Parser
    Packed.Bytes.Stream.ST
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  ghc-options: -rtsopts -threaded
  other-modules:
    Parser
    Data.Trie.Naive
  hs-source-dirs:
      test
    , common
  build-depends:
      base >=4.7 && <5
    , corrupted-memory-example
    , containers >= 0.5.10
    , split
    , ghc-prim
    , primitive
  default-language: Haskell2010

